Nuovo colore action bar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,7 +9,7 @@
  
     <string-array name="categoria_val">
          <item>Tutto</item>
-        <item>Attività comerciale </item>
+        <item>Attività commerciale </item>
         <item>Punto d\'interesse</item>
        
     </string-array>
