--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="app_name">Nearsens</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_map">MapActivity</string>
+    <string name="title_activity_map">Mappa</string>
     
     <string name="categoria_main">Seleziona una categoria</string>
  
