Cambio del font e ottimizzazione del codice

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,5 +13,10 @@
         <item>Punto d\'interesse</item>
        
     </string-array>
+    
+
+    <attr format="string" name="fontPath"/>
+  
+    <item name="calligraphy_tag_id" type="id"/>
 
 </resources>
